--- a/static/screen.css
+++ b/static/screen.css
@@ -58,7 +58,7 @@ a, .blue {
     overflow-y: auto;
     zoom: 1;
 }
-.content ul, .content .hero-unit {
+.content ul, .content .hero-unit, .content h1, .content h2 {
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -87,30 +87,17 @@ aside {
     overflow-y: auto;
     margin-bottom: 30px;
     margin-left: 15px;
+    margin-right: 15px;
     font-size: smaller;
 }
-aside.info ul {
+aside ul {
     margin-top: 30px;
 }
-aside.info li {
-    margin-bottom: 18px;
+aside li {
     width: 100%;
 }
-aside.info li a {
+aside li a {
     color: #222;
-    border: 1px solid #eee;
-    border-radius: 30px;
-    padding: 5px;
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    background-color: #fafafa;
-    background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
-    background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
-    background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
-    background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
-    background-repeat: repeat-x;
 }
 aside.about a {
     color: #222;
