--- a/static/style.css
+++ b/static/style.css
@@ -329,3 +329,14 @@ section.mainContent div {
 .hidden {
     display: none !important;
 }
+
+@media ( max-width: 979px ) {
+    body {
+        padding: 0;
+        margin: 0;
+    }
+    section.mainContent {
+        padding-top: 0;
+        margin-top: -20px;
+    }
+}
